--- a/administradores/src/componentes/dashboard/dashboard.html
+++ b/administradores/src/componentes/dashboard/dashboard.html
@@ -1,4 +1,3 @@
-<!-- dashboard.html -->
 <div class="dashboard-container">
   <!-- Barra de navegación superior -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm sticky-top">
@@ -20,7 +19,7 @@
           <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown">
             <div class="me-2 d-none d-md-block">
               <span class="small text-white-50 d-block">Bienvenido,</span>
-              <strong class="text-white">{{currentUser?.name || 'Administrador'}}</strong>
+              <strong class="text-white">{{currentUser?.nombre || 'Administrador'}}</strong>
             </div>
             <i class="bi bi-person-circle fs-4"></i>
           </a>
@@ -51,8 +50,8 @@
             <div class="mb-3">
               <i class="bi bi-person-circle display-6 text-primary"></i>
             </div>
-            <h6 class="mb-1 fw-bold">{{currentUser?.name || 'Administrador'}}</h6>
-            <small class="text-muted">Sistema Turístico</small>
+            <h6 class="mb-1 fw-bold">{{currentUser?.nombre || 'Administrador'}}</h6>
+            <small class="text-muted">Super Administrador</small>
           </div>
           
           <!-- Menú principal -->
@@ -90,11 +89,35 @@
                 Hoteles
               </a>
             </li>
-            <!-- NUEVO ENLACE DE CATEGORÍAS -->
             <li class="nav-item">
               <a class="nav-link" routerLink="/categorias" routerLinkActive="active">
                 <i class="bi bi-tags me-2"></i>
                 Categorías
+              </a>
+            </li>
+          </ul>
+          
+          <!-- Reportes -->
+          <h6 class="sidebar-heading px-3 mt-4 mb-2 text-muted text-uppercase small fw-bold">
+            <i class="bi bi-bar-chart me-2"></i> Reportes
+          </h6>
+          <ul class="nav flex-column mb-4">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="bi bi-graph-up me-2"></i>
+                Ocupación
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="bi bi-cash-coin me-2"></i>
+                Finanzas
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="bi bi-star me-2"></i>
+                Satisfacción
               </a>
             </li>
           </ul>
@@ -126,19 +149,37 @@
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-4 border-bottom">
           <h1 class="h2 fw-bold">
             <i class="bi bi-speedometer2 me-2 text-primary"></i>
-            Dashboard
+            Dashboard SuperAdmin
           </h1>
           <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
-              <button type="button" class="btn btn-sm btn-outline-secondary" (click)="onListClick('Regiones')">
-                <i class="bi bi-list me-1"></i> Ver Todas las Regiones
+              <button type="button" class="btn btn-sm btn-outline-secondary">
+                <i class="bi bi-calendar me-1"></i> Hoy: {{currentDate | date:'dd/MM/yyyy'}}
               </button>
             </div>
+            <button type="button" class="btn btn-sm btn-outline-secondary" (click)="onListClick('Regiones')">
+              <i class="bi bi-list me-1"></i> Ver Todas las Regiones
+            </button>
           </div>
         </div>
 
-        <!-- Tarjetas de resumen con botones funcionales -->
-        <div class="row mb-4">
+        <!-- Indicador de carga -->
+        <div *ngIf="loading" class="text-center py-5">
+          <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Cargando...</span>
+          </div>
+          <p class="mt-2 text-muted">Cargando datos del dashboard...</p>
+        </div>
+
+        <!-- Mensaje de error -->
+        <div *ngIf="errorMessage" class="alert alert-danger alert-dismissible fade show" role="alert">
+          <i class="bi bi-exclamation-triangle-fill me-2"></i>
+          {{errorMessage}}
+          <button type="button" class="btn-close" (click)="errorMessage = ''"></button>
+        </div>
+
+        <!-- Tarjetas de resumen con botones funcionales (solo mostrar cuando no está cargando) -->
+        <div *ngIf="!loading" class="row mb-4">
           <!-- Regiones -->
           <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-left-primary border-3 border-start border-0 shadow-sm h-100 py-2">
@@ -148,11 +189,11 @@
                     <div class="text-xs fw-bold text-primary text-uppercase mb-1">
                       Regiones
                     </div>
-                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[0].count}}</div>
+                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[0]?.count || 0}}</div>
                     <div class="mt-2">
-                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[0].change)">
-                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[0].change) + ' me-1'"></i> 
-                        {{summaryCards[0].change}}%
+                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[0]?.change || 0)">
+                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[0]?.change || 0) + ' me-1'"></i> 
+                        {{summaryCards[0]?.change || 0}}%
                       </span>
                       <small class="text-muted ms-2">vs mes pasado</small>
                     </div>
@@ -182,11 +223,11 @@
                     <div class="text-xs fw-bold text-success text-uppercase mb-1">
                       Provincias
                     </div>
-                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[1].count}}</div>
+                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[1]?.count || 0}}</div>
                     <div class="mt-2">
-                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[1].change)">
-                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[1].change) + ' me-1'"></i> 
-                        {{summaryCards[1].change}}%
+                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[1]?.change || 0)">
+                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[1]?.change || 0) + ' me-1'"></i> 
+                        {{summaryCards[1]?.change || 0}}%
                       </span>
                       <small class="text-muted ms-2">vs mes pasado</small>
                     </div>
@@ -216,11 +257,11 @@
                     <div class="text-xs fw-bold text-info text-uppercase mb-1">
                       Ciudades
                     </div>
-                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[2].count}}</div>
+                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[2]?.count || 0}}</div>
                     <div class="mt-2">
-                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[2].change)">
-                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[2].change) + ' me-1'"></i> 
-                        {{summaryCards[2].change}}%
+                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[2]?.change || 0)">
+                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[2]?.change || 0) + ' me-1'"></i> 
+                        {{summaryCards[2]?.change || 0}}%
                       </span>
                       <small class="text-muted ms-2">vs mes pasado</small>
                     </div>
@@ -250,11 +291,11 @@
                     <div class="text-xs fw-bold text-warning text-uppercase mb-1">
                       Hoteles
                     </div>
-                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[3].count}}</div>
+                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[3]?.count || 0}}</div>
                     <div class="mt-2">
-                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[3].change)">
-                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[3].change) + ' me-1'"></i> 
-                        {{summaryCards[3].change}}%
+                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[3]?.change || 0)">
+                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[3]?.change || 0) + ' me-1'"></i> 
+                        {{summaryCards[3]?.change || 0}}%
                       </span>
                       <small class="text-muted ms-2">vs mes pasado</small>
                     </div>
@@ -275,7 +316,7 @@
             </div>
           </div>
 
-          <!-- NUEVA TARJETA: Categorías -->
+          <!-- Categorías -->
           <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-left-danger border-3 border-start border-0 shadow-sm h-100 py-2">
               <div class="card-body">
@@ -284,11 +325,11 @@
                     <div class="text-xs fw-bold text-danger text-uppercase mb-1">
                       Categorías
                     </div>
-                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[4].count}}</div>
+                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[4]?.count || 0}}</div>
                     <div class="mt-2">
-                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[4].change)">
-                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[4].change) + ' me-1'"></i> 
-                        {{summaryCards[4].change}}%
+                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[4]?.change || 0)">
+                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[4]?.change || 0) + ' me-1'"></i> 
+                        {{summaryCards[4]?.change || 0}}%
                       </span>
                       <small class="text-muted ms-2">vs mes pasado</small>
                     </div>
@@ -311,7 +352,7 @@
         </div>
 
         <!-- Mensaje informativo -->
-        <div class="row">
+        <div *ngIf="!loading" class="row">
           <div class="col-12">
             <div class="card shadow-sm border-0">
               <div class="card-body text-center p-5">
@@ -321,7 +362,7 @@
                 <h4 class="mb-3">Panel de Administración</h4>
                 <p class="text-muted mb-4">
                   Utilice los botones de las tarjetas superiores para gestionar las diferentes entidades del sistema.
-                  Bienvenido, {{currentUser?.name || 'Administrador'}}.
+                  Bienvenido, {{currentUser?.nombre || 'Administrador'}}.
                 </p>
                 <div class="row justify-content-center">
                   <div class="col-md-8">
@@ -362,7 +403,7 @@
         </div>
         <h4 class="mb-3">Inicio de sesión exitoso</h4>
         <p class="text-muted">
-          Has accedido al panel de administración del Sistema Turístico como <strong>{{currentUser?.name || 'Administrador'}}</strong>.
+          Has accedido al panel de administración del Sistema Turístico como <strong>{{currentUser?.nombre || 'Administrador'}}</strong>.
           Desde aquí puedes gestionar regiones, provincias, ciudades, hoteles y categorías.
         </p>
       </div>
